--- a/Developpement/templates/base.html
+++ b/Developpement/templates/base.html
@@ -1,40 +1,59 @@
-{% extends "bootstrap/base.html"%}
-  {% block title %}{{title}}{% endblock %}
-  {% block style %}
-  {{ super() }}
-  <link rel="stylesheet" href="{{url_for('static', filename='home.css')}}">
-  {% endblock %}
-  {% block navbar %}
-  <nav class="navbar navbar-default">
-        <div class="container">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/">ImageQuatuor</a>
-          </div>
-          <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Quatuor <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Action</a></li>
-                </ul>
-              </li>
-              <li><a href="/">Home</a></li>
-              <li><a href="/books">Books</a></li>
-              <li><a href="/authors">Authors</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-      </nav>
+{% extends "bootstrap/base.html" %}
 
-  {% endblock %}
-  {% block content %}
-  <div id="main" class="container them-showcase"role="main" >
+{% block title %}{{ title }}{% endblock %}
+
+{% block styles %}
+{{ super() }}
+<link rel="stylesheet" href="{{ url_for('static',filename='styles/base.css')}}">
+{% endblock %}
+
+{% block navbar %}
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="/">TinyAmazon</a>
+      </div>
+      <div id="navbar" class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Quatuor<span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="/quatuor/presentation/">Présentation</a></li>
+                <li><a href="/quatuor/repertoire/">Repertoire</a></li>
+                <li><a href="/quatuor/extrait/">Extrait</a></li>
+                <li><a href="/quatuor/concerts/">Concerts</a></li>
+                <li><a href="/quatuor/presse/">presse</a></li>
+              </ul>
+            </li>
+          <li id="tab-home"><a href="/">Contact</a></li>
+          <li id="tab-books"><a href="/">Liens</a></li>
+        </ul>
+      </div><!--/.nav-collapse -->
+    </div>
+</nav>
+{% endblock %}
+
+{% block content %}
+<div id="main" class="container theme-showcase" role="main">
     {% block main %}{% endblock %}
-  </div>
-  {% endblock %}
+</div>
+{% endblock %}
+
+{% block scripts %}
+{{ super() }}
+<script>
+var tabcur="tab-home";
+{% block js %}
+
+{% endblock %}
+$(function() {
+  $("#"+tabcur).addClass('active')
+})
+</script>
+{% endblock %}
