--- a/Developpement/templates/quatuor_concerts.html
+++ b/Developpement/templates/quatuor_concerts.html
@@ -1,4 +1,31 @@
 {% extends "base.html" %}
 {% block main %}
+<div class="quatuor-concert">
+  <h1 class="titre-gpartie">Concerts</h1>
+  <div class="quatuor-concert-gpartie">
+    <p>
+    <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#concert-quatuor" aria-expanded="false" aria-controls="multiCollapseExample2">Concerts du Quatuor</button>
+    <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#concert-stage" aria-expanded="false" aria-controls=" multiCollapseExample2">Concerts des Stagiaires</button>
+    </p>
+    <div class="row">
+      <div class="col">
+        <div class="collapse multi-collapse" id="concert-quatuor">
+          <div class="card card-body quatuor-concert-div">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d669.4530076172093!2d1.9259484149373018!3d47.843234760172024!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2sfr!4v1544777510376" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <p>Concerts à l'iut d'orleans en remerciement</p>
+          </div>
+        </div>
+      </div>
+      <div class="col quatuor-concert-gdiv">
+        <div class="collapse multi-collapse" id="concert-stage">
+          <div class="card card-body quatuor-concert-div">
+            <p>Les stagières se presenteront à l'iut d'orleans afin de remercier de le groupe 2A11b</p>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d669.4530076172093!2d1.9259484149373018!3d47.843234760172024!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2sfr!4v1544777510376" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+</div>
+  </div>
 
+</div>
 {% endblock %}
