--- a/Developpement/templates/base.html
+++ b/Developpement/templates/base.html
@@ -28,7 +28,7 @@
                 <li><a href="/quatuor/repertoire/">Repertoire</a></li>
                 <li><a href="/quatuor/extrait/">Extrait</a></li>
                 <li><a href="/quatuor/concerts/">Concerts</a></li>
-                <li><a href="/quatuor/presse/">presse</a></li>
+                <li><a href="/quatuor/presse/actu">presse</a></li>
               </ul>
             </li>
           <li id="tab-home"><a href="/">Contact</a></li>
