--- a/Developpement/templates/quatuor_presentation.html
+++ b/Developpement/templates/quatuor_presentation.html
@@ -29,7 +29,35 @@
       <img class="presentation-img" src="{{ url_for('static',filename='img/presentation-quatuor-2.png') }}" alt="">
     </div>
   </div>
+
+<div class="membres">
+  <h1 class="titre-gpartie">Les Membres</h1>
+  <div class="container marketing">
+        <div class="row">
+          <div class="col-lg-5">
+            <img class="img-circle" src="{{ url_for('static',filename='img/Frederic-Dudilet.png') }}" alt="Generic placeholder image" width="140" height="140">
+            <h2>Frederic Dudilet</h2>
+            <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+            </div><!-- /.col-lg-4 -->
+          <div class="col-lg-5">
+            <img class="img-circle" src="{{ url_for('static',filename='img/Olivier-Roussillat.png') }}" alt="Generic placeholder image" width="140" height="140">
+            <h2>Olivier Roussillat</h2>
+            <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+          </div><!-- /.col-lg-4 -->
+          <div class="col-lg-5">
+            <img class="img-circle" src="{{ url_for('static',filename='img/Robert-Ramon.png') }}" alt="Robert-Ramon" width="140" height="140">
+            <h2>Robert Ramon</h2>
+            <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+            </div><!-- /.col-lg-4 -->
+          <div class="col-lg-5">
+            <img class="img-circle" src="{{ url_for('static',filename='img/Tony-Bigot.png') }}" alt="Generic placeholder image" width="140" height="140">
+            <h2>Tony Bigot</h2>
+            <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+          </div><!-- /.col-lg-4 -->
+        </div><!-- /.row -->
+      </div>
+    </div>
 </div>
-</div>
+
 
 {% endblock %}
