Mise a jour de fichier

--- a/Developpement/templates/base.html
+++ b/Developpement/templates/base.html
@@ -21,7 +21,7 @@
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li class="dropdown">
+          <li class="dropdown tab-home">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Quatuor<span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
                 <li><a href="/quatuor/presentation/">Présentation</a></li>
@@ -31,8 +31,8 @@
                 <li><a href="/quatuor/presse/actu">presse</a></li>
               </ul>
             </li>
-          <li id="tab-home"><a href="/">Contact</a></li>
-          <li id="tab-books"><a href="/">Liens</a></li>
+          <li id="tab-contact"><a href="/">Contact</a></li>
+          <li id="tab-liens"><a href="/">Liens</a></li>
         </ul>
       </div><!--/.nav-collapse -->
     </div>
