--- a/Developpement/templates/quatuor_presse_actu.html
+++ b/Developpement/templates/quatuor_presse_actu.html
@@ -28,6 +28,7 @@
     <div class="item actu">
       <h1>Article 2</h1>
       <div class="actu">
+      <div>
       <p>Omitto iuris dictionem in libera civitate contra leges senatusque
         consulta; caedes relinquo; libidines praetereo, quarum acerbissimum
         extat indicium et ad insignem memoriam turpitudinis et paene ad iustum
@@ -35,8 +36,9 @@
         abiecisse et morte voluntaria necessariam turpitudinem depulisse.
         Nec haec idcirco omitto, quod non gravissima sint, sed quia nunc
         sine teste dico.</p>
-      <img src="{{ url_for('static',filename='img/presentation-quatuor-2.png' ) }}" alt="presentation-quatuor-2" class="image-actu">
 
+      </div>
+      <img src="{{ url_for('static',filename='img/presentation-quatuor-2.png' ) }}" alt="presentation-quatuor-2" class="image-actu">
       </div>
     </div>
 
