Amelioration graphique de la page quatuor_presse_actu.html. Modifications du fichier CSS base.css

--- a/Developpement/templates/quatuor_presse_actu.html
+++ b/Developpement/templates/quatuor_presse_actu.html
@@ -1,59 +1,46 @@
 {% extends "base.html" %}
 {% block main %}
-
-<div id="myCarousel" class="carousel slide presse-actu-margin-top" data-ride="carousel">
+<style>
+  body{
+    background-color: rgb(15, 15, 15)
+  }
+</style>
+<div id="myCarousel" class="carousel slide " data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
+    <li id="actu" data-target="#myCarousel" data-slide-to="0" ></li>
+    <li id="actu" data-target="#myCarousel" data-slide-to="1" ></li>
+    <li id="actu" data-target="#myCarousel" data-slide-to="2" ></li>
   </ol>
 
   <!-- Wrapper for slides -->
-  <div class="carousel-inner grey">
+  <div class="carousel-inner ">
     <div class="item active actu">
-      <h1>Article 1</h1>
-      <div class="actu">
-      <p>Omitto iuris dictionem in libera civitate contra leges senatusque
-        consulta; caedes relinquo; libidines praetereo, quarum acerbissimum
-        extat indicium et ad insignem memoriam turpitudinis et paene ad iustum
-        odium imperii nostri, quod constat nobilissimas virgines se in puteos
-        abiecisse et morte voluntaria necessariam turpitudinem depulisse.
-        Nec haec idcirco omitto, quod non gravissima sint, sed quia nunc
-        sine teste dico.</p>
       <img src="{{ url_for('static',filename='img/presentation-quatuor-1.png' ) }}" alt="presentation-quatuor-1" class="image-actu">
-    </div>
+      <div id="contour" class="carousel-caption">
+          <h3 id="actu">Actu 1</h3>
+          <p id="actu">"Titre article 1"</p>
+      </div>
     </div>
 
     <div class="item actu">
-      <h1>Article 2</h1>
       <div class="actu">
-      <div>
-      <p>Omitto iuris dictionem in libera civitate contra leges senatusque
-        consulta; caedes relinquo; libidines praetereo, quarum acerbissimum
-        extat indicium et ad insignem memoriam turpitudinis et paene ad iustum
-        odium imperii nostri, quod constat nobilissimas virgines se in puteos
-        abiecisse et morte voluntaria necessariam turpitudinem depulisse.
-        Nec haec idcirco omitto, quod non gravissima sint, sed quia nunc
-        sine teste dico.</p>
-
-      </div>
-      <img src="{{ url_for('static',filename='img/presentation-quatuor-2.png' ) }}" alt="presentation-quatuor-2" class="image-actu">
+        <img src="{{ url_for('static',filename='img/presentation-quatuor-2.png' ) }}" alt="presentation-quatuor-2" class="image-actu">
+        <div id="contour" class="carousel-caption">
+            <h3 id="actu">Actu 2</h3>
+            <p id="actu">"Titre article 2"</p>
+        </div>
       </div>
     </div>
 
 
     <div class="item actu">
-      <h1>Article 3</h1>
       <div class="actu">
-      <p>Omitto iuris dictionem in libera civitate contra leges senatusque
-        consulta; caedes relinquo; libidines praetereo, quarum acerbissimum
-        extat indicium et ad insignem memoriam turpitudinis et paene ad iustum
-        odium imperii nostri, quod constat nobilissimas virgines se in puteos
-        abiecisse et morte voluntaria necessariam turpitudinem depulisse.
-        Nec haec idcirco omitto, quod non gravissima sint, sed quia nunc
-        sine teste dico.</p>
-      <img src="{{ url_for('static',filename='img/presentation-quatuor-3.jpg' ) }}" alt="presentation-quatuor-3" class="image-actu">
+        <img src="{{ url_for('static',filename='img/presentation-quatuor-3.jpg' ) }}" alt="presentation-quatuor-3" class="image-actu">
+        <div id="contour" class="carousel-caption">
+            <h3 id="actu">Actu 3</h3>
+            <p id="actu">"Titre article 3"</p>
+        </div>
       </div>
     </div>
 
