--- a/Developpement/static/styles/base.css
+++ b/Developpement/static/styles/base.css
@@ -1,5 +1,5 @@
 #main{
-  margin-top: 5em;
+  margin-top: 3em;
 }
 
 .img-accueil{
@@ -11,7 +11,9 @@ p,h1,h2{
   font-family: Verdana,sans-serif;
 }
 
-
+.fond-noir{
+  background-color: rgb(23, 23, 23)
+}
 
 .titre-gpartie{
 text-align: center;
@@ -102,9 +104,8 @@ text-align: center
 }
 
 .image-actu{
-  width: 200%;
-  height: 200%;
-  margin-left: 1%;
+  width: 100%;
+  height: 50%;
 }
 
 .actu>p{
@@ -114,7 +115,8 @@ text-align: center
 
 .actu>h1{
   text-align: center;;
-  margin-top: 1%
+  margin-top: 1%;
+  color: rgb(112, 112, 112)
 }
 
 
@@ -131,4 +133,22 @@ text-align: center
   text-align: center;
   margin-left: 5%;
   margin-top: 15%;
+}
+
+
+.taille-carousel{
+  height: 100%;
+  width: 100%;
+}
+
+.color-indic{
+  background-color: lightgrey
+}
+
+#actu{
+      color: rgba(255, 255, 255, 0.95)
+}
+
+#contour{
+background-color: rgba(0, 0, 0, 0.2)
 }
