--- a/Developpement/static/styles/base.css
+++ b/Developpement/static/styles/base.css
@@ -146,9 +146,11 @@ text-align: center
 }
 
 #actu{
-      color: rgba(255, 255, 255, 0.95)
+  color: rgba(255, 255, 255, 0.95)
+
 }
 
 #contour{
-background-color: rgba(0, 0, 0, 0.2)
+background-color: rgba(0, 0, 0, 0.2);
+border-radius: 10px;
 }
