--- a/Developpement/templates/quatuor_concerts.html
+++ b/Developpement/templates/quatuor_concerts.html
@@ -12,11 +12,11 @@
         <div class="collapse multi-collapse" id="concert-quatuor">
           <div class="card card-body quatuor-concert-div">
             <div>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d669.4530076172093!2d1.9259484149373018!3d47.843234760172024!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2sfr!4v1544777510376" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d669.4530076172093!2d1.9259484149373018!3d47.843234760172024!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2sfr!4v1544777510376" width="600" height="450" frameborder="0" class="iframe-quatuor" style="border:0" allowfullscreen></iframe>
               <p class="text-center">16 rue d'issoudin,Orleans 45380</p>
             </div>
             <div class="text-milieu margin-left-5">
-            <p>Omitto iuris dictionem in libera civitate contra leges senatusque consulta; caedes relinquo; libidines praetereo, quarum acerbissimum extat indicium et ad insignem memoriam turpitudinis et paene ad iustum odium imperii nostri, quod constat nobilissimas virgines se in puteos abiecisse et morte voluntaria necessariam turpitudinem depulisse. Nec haec idcirco omitto, quod non gravissima sint, sed quia nunc sine teste dico.</p>
+            <p class="text-quatuor">Omitto iuris dictionem in libera civitate contra leges senatusque consulta; caedes relinquo; libidines praetereo, quarum acerbissimum extat indicium et ad insignem memoriam turpitudinis et paene ad iustum odium imperii nostri, quod constat nobilissimas virgines se in puteos abiecisse et morte voluntaria necessariam turpitudinem depulisse. Nec haec idcirco omitto, quod non gravissima sint, sed quia nunc sine teste dico.</p>
           </div>
           </div>
 
@@ -27,10 +27,10 @@
         <div class="collapse multi-collapse" id="concert-stage">
           <div class="card card-body quatuor-concert-div">
             <div class="text-milieu margin-right-5  ">
-            <p>Omitto iuris dictionem in libera civitate contra leges senatusque consulta; caedes relinquo; libidines praetereo, quarum acerbissimum extat indicium et ad insignem memoriam turpitudinis et paene ad iustum odium imperii nostri, quod constat nobilissimas virgines se in puteos abiecisse et morte voluntaria necessariam turpitudinem depulisse. Nec haec idcirco omitto, quod non gravissima sint, sed quia nunc sine teste dico.</p>
+            <p class="text-stage">Omitto iuris dictionem in libera civitate contra leges senatusque consulta; caedes relinquo; libidines praetereo, quarum acerbissimum extat indicium et ad insignem memoriam turpitudinis et paene ad iustum odium imperii nostri, quod constat nobilissimas virgines se in puteos abiecisse et morte voluntaria necessariam turpitudinem depulisse. Nec haec idcirco omitto, quod non gravissima sint, sed quia nunc sine teste dico.</p>
             </div>
             <div >
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d669.4530076172093!2d1.9259484149373018!3d47.843234760172024!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2sfr!4v1544777510376" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d669.4530076172093!2d1.9259484149373018!3d47.843234760172024!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2sfr!4v1544777510376" width="600" height="450" frameborder="0" class="iframe-stage" style="border:0" allowfullscreen></iframe>
               <p class="text-center">16 rue d'issoudin,Orleans 45380</p>
             </div>
 
