Ajout d'un hoover sur les boutons pour afficher ce qu'ils font

--- a/Developpement/templates/quatuor_concerts.html
+++ b/Developpement/templates/quatuor_concerts.html
@@ -3,9 +3,9 @@
 <div class="quatuor-concert">
   <h1 class="titre-gpartie">Concerts</h1>
   <div class="quatuor-concert-gpartie">
-    <p class="margin-bottom-10">
-    <button class="btn " type="button" data-toggle="collapse" data-target="#concert-quatuor" aria-expanded="false" aria-controls="multiCollapseExample2">Concerts du Quatuor</button>
-    <button class="btn " type="button" data-toggle="collapse" data-target="#concert-stage" aria-expanded="false" aria-controls=" multiCollapseExample2">Concerts des Stagiaires</button>
+    <p class="margin-bottom-10"> <!-- Bouton pour afficher les concerts -->
+    <a href="#" title="Affiche les futurs concerts du quatuor" data-toggle="popover" data-trigger="hover" data-content="" id="boutton-concert"><button class="btn " type="button" data-toggle="collapse" data-target="#concert-quatuor" aria-expanded="false" aria-controls="multiCollapseExample2">Concerts du Quatuor</button></a>
+    <a href="#" title="Affiche les futurs concerts des stagiaires" data-toggle="popover" data-trigger="hover" data-content="" id="boutton-concert"><button class="btn " type="button" data-toggle="collapse" data-target="#concert-stage" aria-expanded="false" aria-controls=" multiCollapseExample2">Concerts des Stagiaires</button></a>
     </p>
     <div class="row">
       <div class="col">
