--- a/Developpement/templates/base.html
+++ b/Developpement/templates/base.html
@@ -41,7 +41,13 @@
 
 {% block content %}
 <div id="main" class="container theme-showcase" role="main">
-    {% block main %}{% endblock %}
+  <div class="bg-image img1"></div>
+  <div class="bg-image img2"></div>
+  <div class="bg-image img3"></div>
+  <div class="bg-image img4"></div>
+  <div class="bg-image img5"></div>
+  <div class="bg-image img6"></div>
+  {% block main %}{% endblock %}
 </div>
 {% endblock %}
 
