--- a/Developpement/templates/quatuor_presse_actu.html
+++ b/Developpement/templates/quatuor_presse_actu.html
@@ -18,8 +18,8 @@
     <div class="item active actu">
         <img src="{{ url_for('static',filename='img/presentation-quatuor-1.png' ) }}" alt="presentation-quatuor-1" class="image-actu">
       <div id="contour" class="carousel-caption">
-          <a href="/quatuor/presse/actu"> <h3 id="actu">Actu 1</h3></a>
-            <a href="/quatuor/presse/actu"> <p id="actu">"Titre article 1"</p></a>
+          <a href="/quatuor/presse/article/Article 1"> <h3 id="actu">Actu 1</h3></a>
+          <a href="/quatuor/presse/article/Article 1"> <p id="actu">"Titre article 1"</p></a>
       </div>
     </div>
 
@@ -27,8 +27,8 @@
       <div class="actu">
           <img src="{{ url_for('static',filename='img/presentation-quatuor-2.png' ) }}" alt="presentation-quatuor-2" class="image-actu">
         <div id="contour" class="carousel-caption">
-            <a href="/quatuor/presse/actu"> <h3 id="actu">Actu 2</h3></a>
-            <a href="/quatuor/presse/actu"> <p id="actu">"Titre article 2"</p></a>
+            <a href="/quatuor/presse/article/Actu 2"> <h3 id="actu">Actu 2</h3></a>
+            <a href="/quatuor/presse/article/Actu 2"> <p id="actu">"Titre article 2"</p></a>
         </div>
       </div>
     </div>
@@ -38,8 +38,8 @@
       <div class="actu">
         <img src="{{ url_for('static',filename='img/presentation-quatuor-3.jpg' ) }}" alt="presentation-quatuor-3" class="image-actu">
         <div id="contour" class="carousel-caption">
-              <a href="/quatuor/presse/actu"> <h3 id="actu">Actu 3</h3></a>
-              <a href="/quatuor/presse/actu"> <p id="actu">"Titre article 3"</p></a>
+              <a href="/quatuor/presse/article/Article 3  "> <h3 id="actu">Actu 3</h3></a>
+              <a href="/quatuor/presse/article/Article 3"> <p id="actu">"Titre article 3"</p></a>
         </div>
       </div>
     </div>
