--- a/Developpement/templates/quatuor_presse_actu.html
+++ b/Developpement/templates/quatuor_presse_actu.html
@@ -56,6 +56,7 @@
     <span class="sr-only">Suivant</span>
   </a>
 </div>
+<a href="/quatuor/presse/all"> Tous les articles</a>
 
 
 {% endblock %}
