--- a/Developpement/templates/quatuor_presse_all.html
+++ b/Developpement/templates/quatuor_presse_all.html
@@ -1,4 +1,39 @@
 {% extends "base.html" %}
 {% block main %}
 
+<div class="container">
+  <h2>Filterable Table</h2>
+  <p>Type something in the input field to search the table for first names, last names or emails:</p>
+  <input class="form-control" id="myInput" type="text" placeholder="Search..">
+  <br>
+  <table class="table table-bordered table-striped">
+    <thead>
+      <tr>
+        <th>Nom de l'article</th>
+        <th>Date</th>
+        <th>Rédigé par</th>
+      </tr>
+    </thead>
+    <tbody id="myTable">
+      {% for elem in liste %}
+      <tr>
+        <td>{{elem[0]}}</td>
+        <td>{{elem[1]}}</td>
+        <td>{{elem[2]}}</td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+</div>
+
+<script>
+$(document).ready(function(){
+ $("#myInput").on("keyup", function() {
+   var value = $(this).val().toLowerCase();
+   $("#myTable tr").filter(function() {
+     $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+   });
+ });
+});
+</script>
 {% endblock %}
