--- a/Developpement/templates/quatuor_presse_all.html
+++ b/Developpement/templates/quatuor_presse_all.html
@@ -17,10 +17,11 @@
     <tbody id="myTable">
       {% for elem in liste %}
       <tr>
-        <td>{{elem[0]}}</td>
+        <td><a href="/quatuor/presse/article/{{elem[0]}}">{{elem[0]}}</a></td>
         <td>{{elem[1]}}</td>
         <td>{{elem[2]}}</td>
       </tr>
+
       {% endfor %}
     </tbody>
   </table>
