--- a/Developpement/templates/quatuor_presse_all.html
+++ b/Developpement/templates/quatuor_presse_all.html
@@ -4,7 +4,7 @@
 <div class="container">
   <input class="form-control" id="myInput" type="text" placeholder="Rechercher...">
   <br>
-  <table class="table table-bordered table-striped">
+  <table class="table table-bordered table-striped table-hover">
     <thead>
       <tr>
         <th>Nom de l'article</th>
