--- a/Developpement/templates/quatuor/quatuor_extrait.html
+++ b/Developpement/templates/quatuor/quatuor_extrait.html
@@ -1,4 +1,9 @@
 {% extends "base.html" %}
 {% block main %}
-
+<h2>Test</h2>
+<p>Test I,partition II</p>
+<audio controls>
+  <source src="{{ url_for('static',filename='audio/test/test.mp3') }}" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
 {% endblock %}
