--- a/Developpement/templates/base.html
+++ b/Developpement/templates/base.html
@@ -26,7 +26,7 @@
               <ul class="dropdown-menu" role="menu">
                 <li><a href="/quatuor/presentation/">Présentation</a></li>
                 <li><a href="/quatuor/repertoire/">Repertoire</a></li>
-                <li><a href="/quatuor/extrait/">Extrait</a></li>
+                <li><a href="/quatuor/extrait/0">Extrait</a></li>
                 <li><a href="/quatuor/concerts/">Concerts</a></li>
                 <li><a href="/quatuor/presse/actu">Presse</a></li>
               </ul>
