amelioration clarinette/informations

--- a/Developpement/templates/clarinette/clarinette_informations.html
+++ b/Developpement/templates/clarinette/clarinette_informations.html
@@ -21,7 +21,7 @@
       <!-- Wrapper for slides -->
       <div class="carousel-inner">
           <div class="item active">
-            <img src="{{ url_for('static',filename='img/fond.jpg' ) }}" style="width:100%;" alt="Clarinette sopranino" >
+            <img src="{{ url_for('static',filename='img/fond.png' ) }}" style="width:100%;" alt="Clarinette sopranino" >
           <div data-toggle="collapse" data-target="#demo" id="contour" class="carousel-caption">
               <h3 class="color">Clarinette sopranino</h3>
               <p>En savoir plus...<span class="glyphicon glyphicon-chevron-down"></span></p>
@@ -43,7 +43,7 @@
     
         <div class="item">
           <div>
-              <img src="{{ url_for('static',filename='img/fond.jpg' ) }}" style="width:100%;" alt="Clarinette soprano en mi bémol" >
+              <img src="{{ url_for('static',filename='img/fond.png' ) }}" style="width:100%;" alt="Clarinette soprano en mi bémol" >
             <div data-toggle="collapse" data-target="#demo2" id="contour" class="carousel-caption">
                 <h3>Clarinette soprano en Mi bémol</h3>
                 <p>En savoir plus...<span class="glyphicon glyphicon-chevron-down"></span></p>
@@ -64,7 +64,7 @@
     
         <div class="item">
           <div>
-            <img src="{{ url_for('static',filename='img/fond.jpg' ) }}" style="width:100%;" alt="" >
+            <img src="{{ url_for('static',filename='img/fond.png' ) }}" style="width:100%;" alt="" >
             <div data-toggle="collapse" data-target="#demo3" id="contour" class="carousel-caption">
                 <h3>Clarinette en Ré</h3>
                 <p>En savoir plus...<span class="glyphicon glyphicon-chevron-down"></span></p>
@@ -82,7 +82,7 @@
 
         <div class="item">
             <div>
-              <img src="{{ url_for('static',filename='img/fond.jpg' ) }}" style="width:100%;" alt="Clarinette en Ut" >
+              <img src="{{ url_for('static',filename='img/fond.png' ) }}" style="width:100%;" alt="Clarinette en Ut" >
               <div data-toggle="collapse" data-target="#demo4" id="contour" class="carousel-caption">
                   <h3>Clarinette en Ut</h3>
                   <p>En savoir plus...<span class="glyphicon glyphicon-chevron-down"></span></p>
@@ -99,7 +99,7 @@
 
         <div class="item">
             <div>
-              <img src="{{ url_for('static',filename='img/fond.jpg' ) }}" style="width:100%;" alt="Clarinette en Si bémol" >
+              <img src="{{ url_for('static',filename='img/fond.png' ) }}" style="width:100%;" alt="Clarinette en Si bémol" >
               <div data-toggle="collapse" data-target="#demo5" id="contour" class="carousel-caption">
                   <h3>Clarinette en Si bémol</h3>
                   <p>En savoir plus...<span class="glyphicon glyphicon-chevron-down"></span></p>
@@ -119,7 +119,7 @@
 
         <div class="item">
             <div>
-              <img src="{{ url_for('static',filename='img/fond.jpg' ) }}" style="width:100%;" alt="Clarinette en La" >
+              <img src="{{ url_for('static',filename='img/fond.png' ) }}" style="width:100%;" alt="Clarinette en La" >
               <div data-toggle="collapse" data-target="#demo6" id="contour" class="carousel-caption">
                   <h3>Clarinette en La</h3>
                   <p>En savoir plus...<span class="glyphicon glyphicon-chevron-down"></span></p>
@@ -139,7 +139,7 @@
 
         <div class="item">
             <div>
-              <img src="{{ url_for('static',filename='img/fond.jpg' ) }}" style="width:100%;" alt="La de basset" >
+              <img src="{{ url_for('static',filename='img/fond.png' ) }}" style="width:100%;" alt="La de basset" >
               <div data-toggle="collapse" data-target="#demo7" id="contour" class="carousel-caption">
                   <h3>La de basset</h3>
                   <p>En savoir plus...<span class="glyphicon glyphicon-chevron-down"></span></p>
@@ -159,7 +159,7 @@
 
         <div class="item">
             <div>
-              <img src="{{ url_for('static',filename='img/fond.jpg' ) }}" style="width:100%;" alt="Clarinette alto" >
+              <img src="{{ url_for('static',filename='img/fond.png' ) }}" style="width:100%;" alt="Clarinette alto" >
               <div data-toggle="collapse" data-target="#demo8" id="contour" class="carousel-caption">
                   <h3>Clarinette alto</h3>
                   <p>En savoir plus...<span class="glyphicon glyphicon-chevron-down"></span></p>
@@ -179,7 +179,7 @@
 
         <div class="item">
             <div>
-              <img src="{{ url_for('static',filename='img/fond.jpg' ) }}" style="width:100%;" alt="Cor de basset" >
+              <img src="{{ url_for('static',filename='img/fond.png' ) }}" style="width:100%;" alt="Cor de basset" >
               <div data-toggle="collapse" data-target="#demo9" id="contour" class="carousel-caption">
                   <h3>Cor de basset</h3>
                   <p>En savoir plus...<span class="glyphicon glyphicon-chevron-down"></span></p>
@@ -199,7 +199,7 @@
 
         <div class="item">
             <div>
-              <img src="{{ url_for('static',filename='img/fond.jpg' ) }}" style="width:100%;" alt="Clarinette basse" >
+              <img src="{{ url_for('static',filename='img/fond.png' ) }}" style="width:100%;" alt="Clarinette basse" >
               <div data-toggle="collapse" data-target="#demo10" id="contour" class="carousel-caption">
                   <h3>Clarinette basse</h3>
                   <p>En savoir plus...<span class="glyphicon glyphicon-chevron-down"></span></p>
@@ -219,7 +219,7 @@
 
         <div class="item">
             <div>
-              <img src="{{ url_for('static',filename='img/fond.jpg' ) }}" style="width:100%;" alt="Clarinette contre alto" >
+              <img src="{{ url_for('static',filename='img/fond.png' ) }}" style="width:100%;" alt="Clarinette contre alto" >
               <div data-toggle="collapse" data-target="#demo11" id="contour" class="carousel-caption">
                   <h3>Clarinette contre alto</h3>
                   <p>En savoir plus...<span class="glyphicon glyphicon-chevron-down"></span></p>
@@ -238,7 +238,7 @@
         </div>
         <div class="item">
             <div>
-              <img src="{{ url_for('static',filename='img/fond.jpg' ) }}" style="width:100%;" alt="Clarinette contrebasse" >
+              <img src="{{ url_for('static',filename='img/fond.png' ) }}" style="width:100%;" alt="Clarinette contrebasse" >
               <div data-toggle="collapse" data-target="#demo12" id="contour" class="carousel-caption">
                   <h3>Clarinette contrebasse</h3>
                   <p>En savoir plus...<span class="glyphicon glyphicon-chevron-down"></span></p>
