--- a/Developpement/templates/base.html
+++ b/Developpement/templates/base.html
@@ -55,8 +55,9 @@
               <li class="dropdown tab-home">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Autour de la clarinette<span class="caret"></span></a>
                   <ul class="dropdown-menu" role="menu">
-                    <li><a href="/quatuor/presentation/">Présentation</a></li>
-
+                    <li><a href="/autourClarinette/historique/">Historique</a></li>
+                    <li><a href="/autourClarinette/informations/">Informations</a></li>
+                    <li><a href="/autourClarinette/datesConcerts/">Dates de concerts</a></li>
                   </ul>
                 </li>
                 <li class="dropdown tab-home">
