Renomage fichier. Ajout d'un extend a quatuor_presse_all. Ajout d'un id a quatuor_presse_all.

--- a/Developpement/templates/base.html
+++ b/Developpement/templates/base.html
@@ -81,7 +81,8 @@
 
 {% block content %}
 <div id="main" class="container theme-showcase" role="main">
-  {% block main %}{% endblock %}
+  {% block main %}
+  {% endblock %}
 </div>
 {% endblock %}
 
