--- a/Developpement/templates/quatuor/quatuor_presse_all.html
+++ b/Developpement/templates/quatuor/quatuor_presse_all.html
@@ -1,7 +1,8 @@
-{% extends "base.html" %}
-{% block main %}
-
-<div class="container">
+{% extends "quatuor/quatuor_presse_actu.html" %}
+{% block presse %}
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<div class="container  liste-article">
   <input class="form-control" id="myInput" type="text" placeholder="Rechercher...">
   <br>
   <table class="table table-bordered table-striped table-hover">
