--- a/Developpement/templates/quatuor/quatuor_presse_actu.html
+++ b/Developpement/templates/quatuor/quatuor_presse_actu.html
@@ -5,6 +5,8 @@
     background-color: rgb(15, 15, 15)
   }
 </style>
+
+
 <div id="myCarousel" class="carousel slide " data-ride="carousel" data-interval="7500">
   <!-- Indicators -->
   <ol class="carousel-indicators">
@@ -36,7 +38,7 @@
 
     <div class="item actu">
       <div class="actu">
-        <img src="{{ url_for('static',filename='img/presentation-quatuor-3.jpg' ) }}" alt="presentation-quatuor-3" class="image-actu">
+        <img src="{{ url_for('static',filename='img/presentation-quatuor-3.png' ) }}" alt="presentation-quatuor-3" class="image-actu">
         <div id="contour" class="carousel-caption">
               <a href="/quatuor/presse/article/Article 3  "> <h3 id="actu">Actu 3</h3></a>
               <a href="/quatuor/presse/article/Article 3"> <p id="actu">"Titre article 3"</p></a>
@@ -57,6 +59,10 @@
   </a>
 </div>
 <a href="/quatuor/presse/all" style="margin-left:46%;"> Touts les articles</a>
+
+{% block presse %}
+
+{% endblock %}
 
 
 {% endblock %}
